Fix locale-dependent code in GameTest (#4451)
Co-authored-by: modmuss <modmuss50@gmail.com>